# phlego

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: cpu.cpp  cpu.h  logger.cpp  logger.h  main.cpp  memory.cpp  memory.h
test/rv32i/: Makefile  rv32i.cpp  rv32i.dis  rv32i.map  rv32i.s
test/rv32i_stall/: Makefile  rv32i_stall.cpp
test/rv32im/: Makefile  rv32im.cpp  rv32im.dis  rv32im.map  rv32im.s
